[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
http = "1.3.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.100"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "mysql",
    "chrono",
    "uuid",
    "bigdecimal",
] }
tower-http = { version = "0.6.6", features = ["cors"] }
dotenv = "0.15.0"
serde_json = "1.0.126"
